@@ -70,6 +70,8 @@ Differences between current and Android 2.2:
 - <sys/vfs.h>: fixed implementation of fstatfs() (also fixes fpathconf()
   which uses it).
 
+- <dlfcn.h>: fixed dlopen() implementation to support dlopen(NULL, ...).
+  This allows one to look at the dynamic symbols exported by an executable.
 
 -------------------------------------------------------------------------------
 Differences between Android 2.2. and Android 2.1:
